Forums (channels) can now specify whether guests can view threads/posts. Fixed minor padding issues and the delete button being misaligned on the pastebin.

--- a/syndbb/static/css/d2k5.css
+++ b/syndbb/static/css/d2k5.css
@@ -499,6 +499,10 @@ a:hover, p a:active, p a:focus {
   margin-top: -20px;
 }
 
+.actions-pastebin{
+  margin-top: -30px;
+}
+
 .actions-main.replybutton a{
   color: #000;
 }
